# Platformer2D-Game

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
code/: AnimatedSprite.cpp  Animation.cpp  AnimationPack.cpp  Game.cpp  Player.cpp  SpriteFrame.cpp  SpriteFrameSet.cpp  SpriteFrames.cpp  hello.cpp  main.cpp
code/GameStates/: DefaultState.cpp
code/Utility/: Box2dDebugDraw.cpp  ColorConverter.cpp  Keyboard.cpp  UnitScaling.cpp
dependencies/: CMakeLists.txt
dependencies/box2d/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/imgui-sfml/: CMakeLists.txt
dependencies/sfml/: CMakeLists.txt
header/: AnimatedSprite.hpp  Animation.hpp  AnimationPack.hpp  Game.hpp  Node.hpp  Player.hpp  SpriteFrame.hpp  SpriteFrameSet.hpp  SpriteFrames.hpp
header/GameStates/: DefaultState.hpp
header/Utility/: Box2dDebugDraw.hpp  ColorConverter.hpp  CoordinateSpaceMapper.hpp  Keyboard.hpp  UnitScaling.hpp
